--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -10,7 +10,7 @@
     <EditText
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:id="@+id/ed_user_name_id"
+        android:id="@+id/et_user_name_id"
         android:hint="User Name"
         android:textSize="30dp"
         android:layout_marginTop="100dp"
@@ -26,7 +26,7 @@
         android:textSize="30dp"
         android:layout_marginTop="100dp"
         android:layout_marginStart="30dp"
-        android:layout_below="@id/ed_user_name_id"
+        android:layout_below="@id/et_user_name_id"
 
         />
 
