--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@drawable/mainimg"
+    >
 
 
     <TextView
@@ -15,7 +17,10 @@
         android:textStyle="bold"
         android:textSize="25dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="60dp"/>
+        android:layout_marginTop="60dp"
+        android:textColor="#000000"
+
+        />
 
 
     <Button
@@ -26,7 +31,10 @@
         android:layout_below="@id/tv_jobs_id"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="40dp"
-        android:textSize="15dp"/>
+        android:textSize="15dp"
+        android:paddingLeft="30dp"
+        android:paddingRight="30dp"
+        android:backgroundTint="#00FF00"/>
 
     <Button
         android:id="@+id/bt_creat_account_id"
@@ -37,6 +45,9 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="40dp"
         android:textSize="19dp"
-        android:paddingRight="50dp"/>
+        android:paddingRight="50dp"
+        android:paddingLeft="50dp"
+        android:backgroundTint="#00FF00"
+      />
 
 </RelativeLayout>
