--- a/app/src/main/res/layout/activity_register_employees.xml
+++ b/app/src/main/res/layout/activity_register_employees.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RegisterEmployeesActivity">
+    tools:context=".RegisterEmployeesActivity"
+    android:background="@drawable/ssa">
 
 
 
