--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -4,17 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SigninActivity">
+    tools:context=".SigninActivity"
+    android:background="@drawable/employees">
 
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tv_sign_in_id"
-        android:text="Sign in"
+        android:text="Sign in as:"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="100dp"
         android:textSize="30dp"
+        android:textColor="#000000"
+        android:textStyle="bold"
         />
 
     <Button
@@ -24,9 +27,11 @@
         android:id="@+id/bt_employers_id"
         android:text="employer"
         android:layout_below="@id/tv_sign_in_id"
-        android:layout_marginTop="30dp"
-        android:paddingRight="20dp"
-        android:paddingLeft="20dp"/>
+        android:layout_marginTop="100dp"
+        android:paddingRight="80dp"
+        android:paddingLeft="80dp"
+        android:backgroundTint="#FF00FF"
+        android:textColor="#FFFFFF"/>
 
 
     <Button
@@ -36,9 +41,11 @@
         android:id="@+id/bt_employees_id"
         android:text="employee"
         android:layout_below="@id/bt_employers_id"
-        android:layout_marginTop="30dp"
-        android:paddingRight="20dp"
-        android:paddingLeft="20dp"
+        android:layout_marginTop="80dp"
+        android:paddingRight="80dp"
+        android:paddingLeft="80dp"
+        android:backgroundTint="#FF00FF"
+        android:textColor="#FFFFFF"
         />
 
 
