--- a/app/src/main/res/layout/activity_submit.xml
+++ b/app/src/main/res/layout/activity_submit.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SubmitActivity">
+    tools:context=".SubmitActivity"
+    android:background="@drawable/employers">
 
 
 
@@ -32,6 +33,7 @@
         android:textSize="20dp"
         android:layout_marginStart="20dp"
         android:textColor="#000000"
+        android:textStyle="bold"
         />
 
 
@@ -46,7 +48,7 @@
         android:hint="Location"
         android:textSize="20dp"
         android:layout_marginStart="20dp"
-        android:textColor="#000000"
+        android:textStyle="bold"
         />
 
 
@@ -59,7 +61,7 @@
         android:hint="Describe the househepl"
         android:textSize="20dp"
         android:layout_marginStart="20dp"
-        android:textColor="#000000"
+        android:textStyle="bold"
         />
 
     <Button
@@ -71,7 +73,11 @@
         android:text="log out"
         android:id="@+id/bt_log_out_id"
         android:paddingRight="100dp"
-        android:paddingLeft="100dp"/>
+        android:paddingLeft="100dp"
+        android:backgroundTint="#00FFFF"
+        android:textColor="#000000"
+        android:textStyle="bold"
+        android:textSize="20dp"/>
 
 
 
