--- a/app/src/main/res/layout/activity_submit2.xml
+++ b/app/src/main/res/layout/activity_submit2.xml
@@ -4,8 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SubmitActivity"
-    android:background="@drawable/employers">
+    tools:context=".SubmitActivity2">
+
+
 
 
 
@@ -23,13 +24,14 @@
 
 
 
+
     <EditText
         android:layout_width="280dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/tv_the_details_id"
         android:layout_marginTop="30dp"
         android:id="@+id/et_type_of_jobs_id"
-        android:hint="What types of jobs should be done?"
+        android:hint="What type of job are you good at? (state)"
         android:textSize="20dp"
         android:layout_marginStart="20dp"
         android:textColor="#000000"
@@ -44,7 +46,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/et_type_of_jobs_id"
         android:layout_marginTop="30dp"
-        android:id="@+id/et_location_id"
+        android:id="@+id/et_location2_id"
         android:hint="Location"
         android:textSize="20dp"
         android:layout_marginStart="20dp"
@@ -55,10 +57,10 @@
     <EditText
         android:layout_width="280dp"
         android:layout_height="wrap_content"
-        android:layout_below="@id/et_location_id"
+        android:layout_below="@id/et_location2_id"
         android:layout_marginTop="30dp"
         android:id="@+id/et_describe_id"
-        android:hint="What kind of a house help would you like? (Describe)"
+        android:hint="What type of an employer would you prefer? (Describe)"
         android:textSize="20dp"
         android:layout_marginStart="20dp"
         android:textStyle="bold"
@@ -71,16 +73,14 @@
         android:layout_centerHorizontal="true"
         android:layout_below="@id/et_describe_id"
         android:layout_marginTop="50dp"
-        android:text="next"
-        android:id="@+id/bt_next_id"
+        android:text="Next"
+        android:id="@+id/bt_next2_id"
         android:paddingRight="100dp"
         android:paddingLeft="100dp"
         android:backgroundTint="#00FFFF"
         android:textColor="#000000"
         android:textStyle="bold"
         android:textSize="20dp"/>
-
-
 
 
 
